syntax = "proto3";

package shared.info;

import "server_types.proto";

option go_package = "github.com/deven96/ahnlich/sdk/ahnlich-client-go/grpc/shared/info;info";

message ServerInfo {
  string address = 1;
  string version = 2;
  server_types.ServerType type = 3;
  uint64 limit = 4;
  uint64 remaining = 5;
}

message StoreUpsert {
  uint64 inserted = 1;
  uint64 updated = 2;
}

message ErrorResponse {
  string message = 1;
  int32 code = 2;
}
